--- a/css/scss/_page-cart.scss
+++ b/css/scss/_page-cart.scss
@@ -39,6 +39,7 @@
                         }
                         position: relative;
                         overflow: hidden;
+                        width: 146px;
                     }
                     .detail {
                         h4 {
