--- a/css/scss/_single-produk.scss
+++ b/css/scss/_single-produk.scss
@@ -98,6 +98,17 @@
                             font-weight: 700;
                             font-size: 14px;
                         }
+                        input#quantity {
+                            text-align: center;
+                            border-color: $hitam;
+                        }
+                        button.quantity-left-minus, button.quantity-right-plus {
+                            background-color: transparent;
+                            border-color: $hitam;
+                        }
+                        .icon-min, .icon-plus {
+                            color: $hitam;
+                        }
                     }
                     .footer-produk {
                         button {
