--- a/css/scss/_header.scss
+++ b/css/scss/_header.scss
@@ -94,6 +94,55 @@
                 button.dropdown:hover {
                     color: $orange;
                 }
+                .dropdown-transaksi {
+                    li {
+                        border-top: 1px solid $grey;
+                    }
+                    h4 {
+                        padding: 10px 15px;
+                        color: $hitam;
+                        font-family: 'Open Sans', sans-serif;
+                        font-weight: 600;
+                        letter-spacing: 1px;
+                        margin: 0px;
+                    }
+                    .list-transaksi {
+                        p {
+                            margin-bottom: 0px;
+                            color: $hitam;
+                            font-family: 'Open Sans', sans-serif;
+                            font-weight: 600;
+                        }
+                        small {
+                            color: grey;
+                        }
+                        padding: 10px 15px;
+                    }
+                    .show-more {
+                        p {
+                            margin-bottom: 0px;
+                            font-size: 12px;
+                            letter-spacing: 1px;
+                            font-weight: 600;
+                        }
+                        text-align: center;
+                        padding: 10px 15px;
+                        background-color: #f0f0f0;
+                        -webkit-transition: .2s color ease-in;
+                        -moz-transition: .2s color ease-in;
+                        -ms-transition: .2s color ease-in;
+                        -o-transition: .2s color ease-in;
+                        transition: .2s color ease-in;
+                    }
+                    .show-more:hover {
+                        color: $biru-muda;
+                    }
+                    top: 75px;
+                    border-top: 3px solid $orange;
+                    border-radius: 0px;
+                    padding: 0px;
+                    width: 200px;
+                }
                 .dropdown-cart {
                     li {
                         .left-cart {
