--- a/css/scss/_page-konfirmasi.scss
+++ b/css/scss/_page-konfirmasi.scss
@@ -53,7 +53,8 @@
                         letter-spacing: 2px;
                         color: $putih;
                     }
-                    background-color: $biru
+                    background-color: $biru;
+                    border: 1px solid $biru;
                 }
                 .panel-body {
                     .list-status {
